finalne zmeny
